--- a/home.html
+++ b/home.html
@@ -11,7 +11,8 @@
     <div class="container d-block mx-auto">
     <ul class="nav">
         <li class="nav-item"><a href="/api/tables">API TABLE |</a></li>
-        <li class="nav-item"><a href="/api/reserve"> WAITLIST</a></li>
+        <li class="nav-item"><a href="/api/reserve"> WAITLIST |</a></li>
+        <li class="nav-item"><a href="#">CLEAR</a></li>
         
     </ul>
 </div>
