--- a/home.html
+++ b/home.html
@@ -18,7 +18,7 @@
 </div>
     <div class="container">
         <div class="jumbotron">
-            <h1 class="text-center">Place of Conviviality</h1>
+            <h1 class="text-center">Reservation</h1>
             <br>
             <h3 class="text-center">Make a Reservation</h3>
             <br>
