--- a/reserve.html
+++ b/reserve.html
@@ -22,7 +22,7 @@
             </div>
                 <div class="container">
                     <div class="jumbotron">
-                        <h1 class="text-center">Place of Conviviality</h1>
+                        <h1 class="text-center">Reservation App</h1>
                         <br>
                         <h3 class="text-center">Make a Reservation</h3>
                         <br>
@@ -91,7 +91,7 @@
 
        $.post("api/tables", newReserve, (res, status)=>{
 
-
+        console.log(res)
 
            
        })
